function(build_test test_name src)
    add_executable(${test_name} ${src})
    target_link_libraries(${test_name} PRIVATE ${PROJECT_NAME})
    target_include_directories(${test_name} PUBLIC $<BUILD_INTERFACE:${PROJECT_INCLUDE_DIR}>)
    add_test(
        NAME ${test_name}
        COMMAND $<TARGET_FILE:${test_name}>
    )
endfunction()
function(create_directory dirname)
    file(MAKE_DIRECTORY ${dirname})
    execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${dirname})
endfunction()

create_directory(${CMAKE_BINARY_DIR}/test/pnm_files)
create_directory(${CMAKE_BINARY_DIR}/test/pnm_files/colors)
create_directory(${CMAKE_BINARY_DIR}/test/png_files)
create_directory(${CMAKE_BINARY_DIR}/test/lut_files)

build_test(test1 test1.f90)
build_test(test2 test2.f90)
build_test(test3 test3.f90)
build_test(test4 test4.f90)
build_test(test5 test5.f90)
build_test(test6 test6.f90)
build_test(test7 test7.f90)
build_test(test8 test8.f90)
build_test(test9 test9.f90)
build_test(test10 test10.f90)
build_test(test11 test11.f90)
build_test(test12 test12.f90)
build_test(test13 test13.f90)
build_test(test14 test14.f90)
build_test(test15 test15.f90)
build_test(test16 test16.f90)
build_test(test17 test17.f90)
build_test(test18 test18.f90)
build_test(test19 test19.f90)
build_test(test20 test20.f90)
build_test(test21 test21.f90)
build_test(test22 test22.f90)
build_test(test23 test23.f90)
build_test(test24 test24.f90)
build_test(test25 test25.f90)
build_test(test26 test26.f90)
build_test(test27 test27.f90)
build_test(test28 test28.f90)
build_test(test29 test29.f90)